--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory(1_List_Demuxers)
 add_subdirectory(2_Demuxing)
 add_subdirectory(3_Remuxing)
 add_subdirectory(4_BufferedIO)
+add_subdirectory(5_RemuxingTrim)
 file(COPY res DESTINATION ${CMAKE_BINARY_DIR})
