feat(avcodec): add encode demo, and transcode demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,6 @@ add_subdirectory(2_Demuxing)
 add_subdirectory(3_Remuxing)
 add_subdirectory(4_BufferedIO)
 add_subdirectory(5_RemuxingTrim)
+add_subdirectory(6_Encode)
+add_subdirectory(7_Transcode)
 file(COPY res DESTINATION ${CMAKE_BINARY_DIR})
