feat(avcodec): add hw decode demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,5 @@ add_subdirectory(4_BufferedIO)
 add_subdirectory(5_RemuxingTrim)
 add_subdirectory(6_Encode)
 add_subdirectory(7_Transcode)
+add_subdirectory(8_HWDecode)
 file(COPY res DESTINATION ${CMAKE_BINARY_DIR})
