feat(hwEncode) : add hw encode demo use videotoolbox

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,5 @@ add_subdirectory(5_RemuxingTrim)
 add_subdirectory(6_Encode)
 add_subdirectory(7_Transcode)
 add_subdirectory(8_HWDecode)
+add_subdirectory(9_HWEncode)
 file(COPY res DESTINATION ${CMAKE_BINARY_DIR})
