feat(swscale) : add nv12 to rgba demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_subdirectory(6_Encode)
 add_subdirectory(7_Transcode)
 add_subdirectory(8_HWDecode)
 add_subdirectory(9_HWEncode)
+add_subdirectory(10_SWScale)
 file(COPY res DESTINATION ${CMAKE_BINARY_DIR})
